--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -6,4 +6,9 @@ header {
     color: white;
     align-items: center;
     justify-content: space-between;
+
+    h2 {
+        margin: 0;
+        padding: 0;
+    }
 }
