fetch and display categories

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,8 @@
 <header>
-  <h2>{{ title() }}</h2>
+  <nav>
+    <span routerLink="/">{{ title() }}</span>
+    <ul>
+      <li routerLink="/categories">Categories</li>
+    </ul>
+  </nav>
 </header>
