--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -7,8 +7,30 @@ header {
     align-items: center;
     justify-content: space-between;
 
-    h2 {
-        margin: 0;
-        padding: 0;
+    nav {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+
+        > span {
+            margin: 0;
+            padding: 0;
+            cursor: pointer;
+            &:hover {
+                color: #777;
+            }
+        }
+    }
+
+    ul {
+        list-style: none;
+
+        li {
+            cursor: pointer;
+            &:hover {
+                color: #777;
+            }
+        }
     }
 }
