--- a/src/app/pages/categories/categories.component.html
+++ b/src/app/pages/categories/categories.component.html
@@ -2,7 +2,7 @@
 
 <div class="cards">
   @for (category of categoryList(); track category.id) {
-  <div class="card">
+  <div class="card" (click)="onClickCategory(category)">
     <div class="title">
       {{ category.name }}
     </div>
