fetch quiz questions & answers

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,6 +3,7 @@
     <span routerLink="/">{{ title() }}</span>
     <ul>
       <li routerLink="/categories">Categories</li>
+      <li routerLink="/questions">Questions</li>
     </ul>
   </nav>
 </header>
