Change app name to Trivia World

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
   <nav>
-    <span routerLink="/">{{ title() }}</span>
+    <span routerLink="/">{{ title }}</span>
     <ul>
       <li routerLink="/categories">Categories</li>
       <li routerLink="/questions">Questions</li>
