--- a/src/app/pages/questions/questions.component.html
+++ b/src/app/pages/questions/questions.component.html
@@ -1,17 +1,36 @@
 <p>questions works!</p>
-
-@for (question of questionList(); track $index; let q_idx = $index) {
-<!-- the text must be passed as an innerHTML because it is encoded in HTML Unicode -->
-<p [innerHTML]="question.question"></p>
-@for (answer of shuffledAnswers(question); track $index; let a_idx = $index) {
-<ul>
-  <li>
-    <input
-      type="radio"
-      [id]="generate_input_id(q_idx, a_idx)"
-      [name]="'q' + q_idx"
-    />
-    <label [for]="generate_input_id(q_idx, a_idx)" [innerHTML]="answer"></label>
-  </li>
-</ul>
-} }
+<div>
+  @if(isRunningQuiz()) {
+  <form>
+    <!-- the text must be passed as an innerHTML because it is encoded in HTML Unicode -->
+    <p [innerHTML]="questionList()[questionIndex()].question"></p>
+    <ul>
+      @for (answer of shuffledAnswers(questionList()[questionIndex()]); track
+      $index) {
+      <li>
+        <input
+          type="radio"
+          [id]="generate_input_id(questionIndex(), $index)"
+          [name]="'q' + questionIndex()"
+          [value]="answer"
+          [(ngModel)]="selectedAnswer"
+        />
+        <label
+          [innerHTML]="answer"
+          [for]="generate_input_id(questionIndex(), $index)"
+        >
+        </label>
+      </li>
+      }
+    </ul>
+    @if (isLastQuestion()) {
+    <button (click)="endQuiz()">Finish Quiz</button> } @else {
+    <button (click)="submitAnswer()">Next</button>
+    }
+  </form>
+  <div>Selected Value: {{ selectedAnswer() }}</div>
+  <div>Score: {{ getScore() }}%</div>
+  } @else {
+  <span>Your Score is {{ getScore() }}%</span>
+  }
+</div>
