add flow between components

--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -9,7 +9,7 @@
       </li>
       }
     </ul>
-    <button>{{ callToAction }}</button>
+    <button (click)="onClickButton()">{{ callToAction }}</button>
   </div>
   <img [src]="imagePath" alt="Illustration" class="responsive" />
 </div>
