--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,8 +2,7 @@
   <nav>
     <span routerLink="/">{{ title }}</span>
     <ul>
-      <li routerLink="/categories">Categories</li>
-      <li routerLink="/questions">Questions</li>
+      <li routerLink="/start">Take a Quiz</li>
     </ul>
   </nav>
 </header>
