--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
+
 :root {
     --ff: "Montserrat", sans-serif;
-    --h1: 800 2rem / 1.2em var(--ff);
+    --h1: 700 2rem / 1.2em var(--ff);
     --p: 400 1rem / 1.5em var(--ff);
     --hue: 60;
     --tertiary-hue: calc(var(--hue) + 300);
