--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
   <nav>
     <span routerLink="/">{{ title }}</span>
     <ul>
-      <li routerLink="/start">Take a Quiz</li>
+      <li routerLink="/quiz">Take a Quiz</li>
     </ul>
   </nav>
 </header>
