add more styles

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
   <nav>
-    <span routerLink="/">{{ title }}</span>
+    <p routerLink="/">{{ title }}</p>
     <ul>
       <li routerLink="/quiz">Take a Quiz</li>
     </ul>
