--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -1,7 +1,7 @@
 <div class="hero-section">
   <div class="text-content">
     <h1>{{ headline }}</h1>
-    <h3>{{ subheadline }}</h3>
+    <p>{{ subheadline }}</p>
     <ul>
       @for (feature of keyFeatures; track feature.id) {
       <li>
