style the score component

--- a/src/app/components/score/score.component.html
+++ b/src/app/components/score/score.component.html
@@ -1,2 +1,6 @@
-<h3>Your Score is {{ computeScore() }}%</h3>
-<button (click)="restartQuiz()">Take another quiz</button>
+<div class="container">
+  <h1>
+    Your Score is <span>{{ computeScore() }}%</span>
+  </h1>
+  <button (click)="restartQuiz()">Take another quiz</button>
+</div>
