--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -2,6 +2,9 @@
   <div class="text-content">
     <h1>{{ headline }}</h1>
     <p>{{ subheadline }}</p>
+    <div class="svg-container small-screen">
+      <img [src]="imagePath" alt="Illustration" class="responsive" />
+    </div>
     <ul>
       @for (feature of keyFeatures; track feature.id) {
       <li>
@@ -11,5 +14,7 @@
     </ul>
     <button (click)="onClickButton()">{{ callToAction }}</button>
   </div>
-  <img [src]="imagePath" alt="Illustration" class="responsive" />
+  <div class="svg-container large-screen">
+    <img [src]="imagePath" alt="Illustration" />
+  </div>
 </div>
